# flask-sustainable

./: .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  example.py  pyproject.toml
.github/workflows/: ci.yaml  pypi.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
flask_sustainable/: __init__.py  base.py  compress.py  extension.py  indicator.py  measure.py  score.py
tests/: test_base.py  test_compress.py  test_indicator.py  test_score.py
