[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask-sustainable"
description = "Brings sustainability to Flask via HTTP headers"
authors = [{name = "Avi Mimoun", email = "_@avim.eu"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Flask",
    "Framework :: Pytest",
    "Framework :: Sphinx"
]
requires-python = ">=3.6"
dynamic = ["version"]
dependencies = [
    "flask >= 2.0.0",
    "codecarbon >= 2.1.3",
    # Compression
    "brotli >= 1.0.0",
    "zstandard >= 0.18.0"
]

[project.optional-dependencies]
test = [
    "pytest >= 2.7.3",
    "coverage >= 6.4.2",
    "black >= 22.6.0",
    "isort >= 5.10.1",
    "docformatter >= 1.4"
]

[project.urls]
Home = "https://flask-sustainable.readthedocs.io/"
Source = "https://github.com/av1m/flask-sustainable.git"

[tool.flit.module]
name = "flask_sustainable"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
skip_covered = true
skip_empty = true
